--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
+  },
+  "engines": {
+    "node":"7.7.1"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +20,7 @@
     "mongoose": "^4.5.9"
   },
   "devDependencies": {
-    "expect": "^1.20.2",
+    "expect": "^1.2 0.2",
     "mocha": "^3.0.2",
     "nodemon": "^1.10.2",
     "supertest": "^2.0.0"
