--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
-    "node":"7.7.1"
+    "node": "6.2.2"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +20,7 @@
     "mongoose": "^4.5.9"
   },
   "devDependencies": {
-    "expect": "^1.2 0.2",
+    "expect": "^1.20.2",
     "mocha": "^3.0.2",
     "nodemon": "^1.10.2",
     "supertest": "^2.0.0"
